fix footer styling alignment

--- a/src/sections/footer/footer.css
+++ b/src/sections/footer/footer.css
@@ -13,7 +13,6 @@
   display: flex;
   flex-wrap: wrap; /* Allow items to wrap to the next line on smaller screens */
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .footer_container > div {
@@ -31,24 +30,18 @@
   margin-bottom: 10px;
 }
 
-h5 {
-  padding-bottom: 10px;
-}
-
-.footer_container .our_services,
-.footer_container .company,
-.footer_container .get_in_touch {
+.footer_container {
   width: 100%; /* Full width on smaller screens */
   margin-top: 10px; /* Adjusted margin for better spacing */
 }
 
-.footer_container .our_services {
-  margin-right: 0;
+.get_intouch_socials_container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.footer_container .company {
-  margin-left: 0;
-}
+
 
 .footer_socials{
   width: 20%;
@@ -57,9 +50,8 @@ h5 {
 
 .socials {
   display: flex;
-  justify-content: center;
   align-self: self-start;
-  gap: 10px;
+  gap: 5px;
 }
 
 
@@ -67,14 +59,6 @@ h5 {
   width: 2rem;
 }
 
-.get_in_touch span {
-  color: #87CEEB;
-  padding: 0.2rem;
-}
-
-.get_in_touch h5{
-  margin-top: 10px;
-}
 
 /* Media Queries Tablets */
 @media screen and (max-width: 768px) {
@@ -83,9 +67,6 @@ h5 {
       margin: 10px 0; /* Adjusted margin for better spacing */
   }
 
-  .footer_container .get_in_touch {
-      order: 4; /* Reorder Get in touch section for better flow */
-  }
 }
 
 /* Media Queries Phones */
